# UWF-Manager

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh_CN.md  app.js  index.html  main.cpp  styles.css
cmake/: CopyVersionedArtifacts.cmake  GenerateGitVersion.cmake  GitVersion.cmake  UwfTarget.cmake  tools.cmake
resources/: app.manifest  app.rc  resources.qrc  style_dark.qss  style_light.qss
resources/i18n/: qtbase_zh_CN.ts  zh_CN.ts
src/app/: CrashHandler.cpp  CrashHandler.h  SecureSingleInstance.cpp  SecureSingleInstance.h
src/core/: Config.h  RegistryExclusionPolicy.cpp  RegistryExclusionPolicy.h  UwfConfig.cpp  UwfConfig.h  UwfModel.cpp  UwfModel.h
src/ui/: AboutDialog.cpp  AboutDialog.h  ApplyPlanDialog.cpp  ApplyPlanDialog.h  CenteredTextStyle.cpp  CenteredTextStyle.h  CommitBatch.h  CommitDispatcher.cpp  CommitDispatcher.h  CommitReportDialog.cpp  CommitReportDialog.h  DialogHelpers.h  Dialogs.cpp  Dialogs.h  DiskTab.cpp  DiskTab.h  ExclusionListWidget.cpp  ExclusionListWidget.h  GlobalStatusPanel.cpp  GlobalStatusPanel.h  HoverHintController.cpp  HoverHintController.h  I18n.cpp  I18n.h  ImportApplier.cpp  ImportApplier.h  ImportDialog.cpp  ImportDialog.h  LogViewerDialog.cpp  LogViewerDialog.h  MainWindow.cpp  MainWindow.h  MarqueeHintBox.cpp  MarqueeHintBox.h  MessageDialog.cpp  MessageDialog.h  OverlayFilesDialog.cpp  OverlayFilesDialog.h  OverlayFloatingWidget.cpp  OverlayFloatingWidget.h  (+58 more)
src/util/: ByteFormat.cpp  ByteFormat.h  ComPtr.h  DriveLetter.cpp  DriveLetter.h  Log.cpp  Log.h  PathMatch.cpp  PathMatch.h  PostGate.h  RegistryKey.cpp  RegistryKey.h  StringUtil.cpp  StringUtil.h  SystemHardwareInfo.cpp  SystemHardwareInfo.h  WindowsVersion.cpp  WindowsVersion.h
src/uwf/: SystemCheck.cpp  SystemCheck.h  UwfSnapshot.cpp  UwfSnapshot.h
src/uwf/api/: CommitResult.h  Types.h  UwfFilter.cpp  UwfFilter.h  UwfOverlay.cpp  UwfOverlay.h  UwfOverlayConfig.cpp  UwfOverlayConfig.h  UwfRegistryFilter.cpp  UwfRegistryFilter.h  UwfVolume.cpp  UwfVolume.h  UwfmgrCli.cpp  UwfmgrCli.h  WriteVerification.h
src/uwf/wmi/: WmiClient.cpp  WmiClient.h  WmiError.cpp  WmiError.h  WmiException.cpp  WmiException.h  WmiResult.h  WmiRowUtil.cpp  WmiRowUtil.h
tests/: ApplicationUiBehaviorTests.cpp  CMakeLists.txt  CoreBehaviorTests.cpp  DialogBehaviorTests.cpp  HubLifecycleTests.cpp  UiBehaviorTests.cpp  Win11TaskbarLayoutStrategyTestAccess.cpp  Win11TaskbarLayoutStrategyTestAccess.h  WindowsPlatformIntegrationTests.cpp  WindowsTaskbarIncompatibilityTests.cpp  WindowsTaskbarIntegrationTests.cpp  WmiApiBehaviorTests.cpp  windows_integration.manifest  windows_integration_manifest.rc  windows_taskbar_incompatible.manifest  windows_taskbar_incompatible_manifest.rc
